--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     <script src="../script.js" defer></script>
 </head>
 <body>
+
+    <div class="decor--circles"></div>
+    <div class="decor--dots"></div>
+    <div class="decor--arrows"></div>
+
+
 <main>
     <section class="courses" aria-labelledby="courses-title">
         <div class="courses__main container">
+
             <header class="courses__header">
                 <div class="courses__header-description">
                     <p>Enjoy your studying!</p>
@@ -797,6 +804,7 @@
             </div>
         </div>
     </section>
+
 </main>
 </body>
 </html>
